# smart-offertgenerator

./: .gitignore  .pre-commit-config.yaml  BUG_TRIAGE.md  CI_CD_README.md  CONTRIBUTING.md  PROJECT_STATUS.md  README.md  SENTRY_SETUP.md  TESTING.md  docker-compose.test.yml  docker-compose.yml  start.sh
backend/: .mypy.ini  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Makefile  README.md  alembic.ini  bandit-report.json  check_alembic_version.py  check_tables.py  create_all_tables.py  create_basic_prices.py  create_generation_rule.py  create_price_profile.py  create_user.py  drop_all_tables.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  setup-dev.sh  start.sh  test_options_history.py  test_pdf_generator.py  test_public_selection.py
backend/.github/workflows/: ci.yml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_fixed_initial.py  001_initial_migration.py  002_add_auth_and_tenancy.py  003_add_project_requirements.py  004_add_generation_rules.py  004_add_quote_adjustments.py  005_add_quote_adjustment_log.py  007_add_tuning_stat_table.py  008_add_company_id_to_quote_adjustment_log.py  009_add_unique_index_to_generation_rule.py  010_add_index_to_quote_adjustment_log.py  011_fix_generation_rule_foreign_key.py  012_add_optional_items_to_quote_item.py  3b75f6540da3_add_quote_events_and_public_token.py  4b75f6540da4_add_quote_updated_at.py  5b75f6540da5_add_quote_packages.py
backend/app/: auth.py  auto_tuning.py  crud.py  csrf.py  db.py  main.py  middleware.py  models.py  pdf_generator.py  pricing.py  rate_limiting.py  rule_evaluator.py  rules_eval.py  sanitization.py  schemas.py  seed_example.py  tuning.py
backend/app/templates/: quote_template.html
backend/docs/: dev-curl.md  rate-limiting.md
backend/offert_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: import_prices.py
backend/templates/: quote_template.html
backend/tests/: __init__.py  test_auto_generation.py  test_auto_tuning.py  test_autogenerate.py  test_basic_crud.py  test_crud_operations.py  test_csrf_protection.py  test_main.py  test_production_readiness.py  test_project_requirements.py  test_public_selection.py  test_quote_create.py  test_rate_limiting.py  test_rules_eval.py  test_security_features.py  test_smoke.py  test_smoke_docker.py  test_tuning.py  test_validation.py  test_xss_protection.py
docs/: auto-tuning-example.md  dev-curl.md  quote-packages-curl.md
frontend/: .eslintrc.json  .lintstagedrc.js  .prettierignore  CONTRIBUTING.md  DESIGN_SYSTEM.md  Dockerfile  README.md  cypress.config.ts  (+10 more)
(+129 files in other folders)
