[project]
name = "offert-backend"
version = "0.1.0"
description = "FastAPI backend for smart quote generator"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "SQLAlchemy>=2",
  "psycopg[binary]",
  "python-dotenv",
  "jinja2",
  "weasyprint",
  "python-multipart",
]

[tool.uvicorn]
reload = true
host = "0.0.0.0"
port = 8000
